--- a/myIndex.html
+++ b/myIndex.html
@@ -50,7 +50,7 @@
         </section>
     </main>
     <footer>
-        <a href="kieu-diem-s-personal/index.html">Back to professional page</a>
+        <a href="/index.html">Back to professional page</a>
     </footer>
 </body>
 </html>
