--- a/myIndex.html
+++ b/myIndex.html
@@ -50,7 +50,7 @@
         </section>
     </main>
     <footer>
-        <a href="kieu%20diem's%20personal/index.html">Back to professional page</a>
+        <a href="index.html" > Back to professional page</a>
     </footer>
 </body>
 </html>
